# s-zip

./: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  ENCRYPTION_PERFORMANCE.md  LICENSE  Makefile  PERFORMANCE.md  README.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.10.1.md  TODOS.md
.github/workflows/: ci.yml  rust.yml
benches/: async_bench.rs  compression_bench.rs  encryption_bench.rs  file_size_analysis.rs  read_bench.rs
examples/: arbitrary_writer.rs  async_basic.rs  async_http_reader.rs  async_in_memory.rs  async_reader_advanced.rs  async_streaming.rs  async_vs_sync_s3.rs  basic.rs  cloud_s3.rs  concurrent_demo.rs  encryption_advanced.rs  encryption_basic.rs  encryption_roundtrip.rs  memory_test_100mb.rs  memory_test_1gb.rs  memory_test_encryption.rs  memory_test_parallel.rs  network_simulation.rs  optimized_usage.rs  parallel_compression.rs  parallel_memory_test.rs  perf_compare.rs  perf_test.rs  reader_optimization.rs  verify_s3_upload.rs  zstd_compression.rs
src/: async_reader.rs  async_writer.rs  decrypt_reader.rs  encryption.rs  error.rs  format.rs  lib.rs  parallel.rs  reader.rs  seekless.rs  writer.rs
src/cloud/: gcs.rs  mod.rs  s3.rs
tests/: async_reader_tests.rs  async_writer_tests.rs  p3_features.rs  proptest_zip_parsing.rs  unzip_compat.rs  zip64_reader.rs  zstd_compression.rs
